--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="camera_access">You need to allow access to the camera</string>
     <string name="camera_denied">Use of camera denied</string>
     <string name="image_too_small">Photo must be at least 1Kb in size</string>
+    <string name="enroll">Enroll</string>
 </resources>
